# open-steamworks

./: .gitignore  CMakeLists.txt  README.md
OpenSteamAPI/src/: CCallbackMgr.cpp  CCallbackMgr.h  CCallbackMgr.hpp  CMakeLists.txt  ClientWrap.cpp  Interface_OSW.cpp  Interface_OSW.h  Interface_OSW.hpp  Makefile  POSIXLibrary.h  Win32Library.hpp
OpenSteamworks/: CMakeLists.txt  Open Steamworks.vcxproj  Open Steamworks.vcxproj.filters  OpenAPI.h  OpenSteamAPI.h  OpenSteamAPI.hpp  OpenSteamworks.h  OpenSteamworks.hpp  Steamclient.h  Steamclient.hpp
OpenSteamworks/EMsg/: CMakeLists.txt  EMsg.hpp
OpenSteamworks/Interfaces/Client/: IClientAppDisableUpdate.hpp  IClientAppManager.h  IClientAppManager.hpp  IClientApps.hpp  IClientAudio.h  IClientAudio.hpp  IClientBilling.h  IClientBilling.hpp  IClientBluetoothManager.hpp  IClientCompat.h  IClientCompat.hpp  IClientConfigStore.hpp  IClientContentServer.hpp  IClientControllerSerialized.hpp  IClientDepotBuilder.h  IClientDepotBuilder.hpp  IClientDeviceAuth.hpp  IClientEngine.h  IClientEngine.hpp  IClientFriends.h  IClientFriends.hpp  IClientGameCoordinator.hpp  IClientGameNotifications.hpp  IClientGameSearch.hpp  IClientGameServer.h  IClientGameServer.hpp  IClientGameServerInternal.hpp  IClientGameServerPacketHandler.hpp  IClientGameServerStats.hpp  IClientGameStats.hpp  IClientHTMLSurface.hpp  IClientHTTP.hpp  IClientInstallUtils.hpp  IClientInventory.hpp  IClientMatchmaking.h  IClientMatchmaking.hpp  IClientMatchmakingServers.h  IClientMatchmakingServers.hpp  IClientModuleManager.hpp  IClientMusic.hpp  (+45 more)
OpenSteamworks/Interfaces/Steam/ISteamClient/: ISteamClient018.h  ISteamClient019.h
OpenSteamworks/Interfaces/Steam/ISteamRemotePlay/: ISteamRemotePlay001.h
OpenSteamworks/Protobuf/: CMakeLists.txt  clientmetrics.proto  content_manifest.proto  contenthubs.proto  encrypted_app_ticket.proto  enums.proto  enums_clientserver.proto  enums_productinfo.proto  htmlmessages.proto  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steammessages_accounthardware.steamclient.proto  steammessages_auth.steamclient.proto  steammessages_base.proto  steammessages_broadcast.steamclient.proto  steammessages_chat.steamclient.proto  steammessages_client_objects.proto  steammessages_clientlanp2p.proto  steammessages_clientmetrics.steamclient.proto  steammessages_clientserver.proto  steammessages_clientserver_2.proto  steammessages_clientserver_appinfo.proto  steammessages_clientserver_friends.proto  steammessages_clientserver_gameservers.proto  steammessages_clientserver_lbs.proto  steammessages_clientserver_login.proto  steammessages_clientserver_mms.proto  steammessages_clientserver_ucm.proto  steammessages_clientserver_uds.proto  steammessages_clientserver_ufs.proto  steammessages_clientserver_userstats.proto  steammessages_clientserver_video.proto  steammessages_cloud.steamclient.proto  steammessages_community.steamclient.proto  steammessages_credentials.steamclient.proto  steammessages_datapublisher.steamclient.proto  steammessages_depotbuilder.steamclient.proto  steammessages_deviceauth.steamclient.proto  steammessages_econ.steamclient.proto  steammessages_familygroups.steamclient.proto  (+47 more)
OpenSteamworks/Types/: AppsCommon.h  AppsCommon.hpp  BillingCommon.h  BillingCommon.hpp  CCallback.h  CCallback.hpp  CGameID.h  CGameID.hpp  CSteamID.h  CSteamID.hpp  ClientAudioCommon.hpp  ClientCommon.h  ClientCompatCommon.hpp  ClientShortcutsCommon.hpp  ContentServerCommon.h  ContentServerCommon.hpp  ControllerCommon.h  DepotBuilderCommon.hpp  ECurrencyCode.h  ECurrencyCode.hpp  EMsgs.hpp  EResult.h  EResult.hpp  ESteamError.h  ESteamNotify.h  EVoiceResult.hpp  ForwardDeclaredCommon.hpp  FriendGameInfo.h  FriendGameInfo.hpp  FriendsCommon.h  FriendsCommon.hpp  GameCoordinatorCommon.h  GameCoordinatorCommon.hpp  GameServerCommon.h  GameServerCommon.hpp  GameServerStatsCommon.h  GameServerStatsCommon.hpp  GameStatsCommon.h  GameStatsCommon.hpp  HTMLSurfaceCommon.h  (+43 more)
Test Platform/: CMakeLists.txt  main.cpp
cmake/: protobuf.cmake
